# rle

./: .gitignore  .gitmodules  BUG_REPORT.md  CMakeLists.txt  COVERAGE_ANALYSIS.md  FINAL_SUMMARY.md  INTEGRATION_GUIDE.md  POSITIONAL_TESTS.md  README.md  TEST_CODE_FIXES_SUMMARY.md  TEST_RESULTS.md  UNCOVERED_CODE_ANALYSIS.md  UTAH_RLE_INVESTIGATION.md  check_header  check_header.cpp  find_bug  find_bug.cpp  rle.cpp  rle.hpp  test_16x16  test_16x16.cpp  test_16x16_debug.cpp  test_4x4  test_alpha_debug.cpp  test_alpha_minimal  test_alpha_minimal.cpp  test_compare  test_compare_implementations.cpp  test_coverage.cpp  test_decode_utah.cpp  test_decoder_debug  test_decoder_debug.cpp  test_diag_debug.cpp  test_encoder_debug  test_encoder_debug.cpp  test_fuzz  test_fuzz.cpp  test_positional.cpp  test_read_utah  test_read_utah.cpp  (+22 more)
.github/workflows/: ci.yml
_codeql_build_dir/: Makefile  test_rle
